WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73857
AX: aria-hidden doesn't work on iframe elements
https://bugs.webkit.org/show_bug.cgi?id=73857
Summary
AX: aria-hidden doesn't work on iframe elements
chris fleizach
Reported
2011-12-05 12:48:11 PST
aria-hidden does not seem to work on iframe elements.
Attachments
patch
(6.70 KB, patch)
2011-12-05 14:38 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-12-05 14:38:11 PST
Created
attachment 117940
[details]
patch
chris fleizach
Comment 2
2011-12-05 14:38:34 PST
rdar://10451054
Darin Adler
Comment 3
2011-12-05 14:41:59 PST
Comment on
attachment 117940
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117940&action=review
> Source/WebCore/accessibility/AccessibilityScrollView.cpp:135 > + AccessibilityObject *webArea = webAreaObject();
The * should be next to the type.
WebKit Review Bot
Comment 4
2011-12-05 14:42:10 PST
Attachment 117940
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/platform/mac/accessibility/ifr..." exit_code: 1 Source/WebCore/accessibility/AccessibilityScrollView.cpp:135: Declaration has space between type name and * in AccessibilityObject *webArea [whitespace/declaration] [3] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 5
2011-12-05 14:44:49 PST
http://trac.webkit.org/changeset/102051
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug