AX: aria-hidden doesn't work on iframe elements https://bugs.webkit.org/show_bug.cgi?id=73857

Reviewed by Darin Adler.

Source/WebCore:

Test: platform/mac/accessibility/iframe-aria-hidden.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::addAttachmentChildren):
(WebCore::AccessibilityRenderObject::addChildren):
* accessibility/AccessibilityRenderObject.h:
* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::accessibilityIsIgnored):
(WebCore::AccessibilityScrollView::addChildren):
* accessibility/AccessibilityScrollView.h:

LayoutTests:

* platform/mac/accessibility/iframe-aria-hidden-expected.txt: Added.
* platform/mac/accessibility/iframe-aria-hidden.html: Added.



Canonical link: https://commits.webkit.org/90506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102051 268f45cc-cd09-0410-ab3c-d52691b4dbfc